Fix z-index of code block's left bar

--- a/web/css/codex.scss
+++ b/web/css/codex.scss
@@ -30,7 +30,8 @@ figure.gk-code {
 
   &:before {
     content: "";
-    display: inline-block;
+    z-index: 2;
+    display: none;
     position: absolute;
     top: 0;
     bottom: 0;
